Charset should go first.

--- a/php/head.htm
+++ b/php/head.htm
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+  <meta charset="utf-8">
   <title>C-C-C-CompoUploadr</title>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta name="language" content="en"> 
   <meta name="description" content="Saga Musix compo upload form for EsperNet one hour tracking compos.">
   <meta name="keywords" content="Upload, Compo, Host, OHC, One Hour Compo, Saga Musix, Tracker">
