--- a/php/foot.htm
+++ b/php/foot.htm
@@ -5,8 +5,8 @@
       </ul>
       
       <p id="footer">
-        2010 - 2017 by Saga Musix and coda &ndash; Powered by <a href="https://openmpt.org/">OpenMPT</a>.<br>
-        Be sure to also have a look at <a href="http://compo.toastyx.net/">ToastyX's compo archive</a>!
+        2010 - 2020 by Saga Musix and coda &ndash; Powered by <a href="https://openmpt.org/">OpenMPT</a>.<br>
+        Be sure to also have a look at <a href="http://compo.toastyx.net/">ToastyX's compo archive</a> and the <a href="https://modshrine.com/">ModShrine archive</a>!
       </p>
      
   </body>
